Updates for making the option invisisble

--- a/examples/esm/index.html
+++ b/examples/esm/index.html
@@ -12,6 +12,7 @@
 
 <body>
   <div class="gui-wrapper">
+    <h1>Spin the Wheel</h1>
     <p>Click-drag (or flick) to spin the wheel.</p>
   </div>
 
